syntax = "proto3";
package protocol;

option go_package = "github.com/zllovesuki/G14Manager/rpc/protocol";

import "google/protobuf/empty.proto";

service BatteryChargeLimit {
  rpc GetCurrentLimit(google.protobuf.Empty)
      returns (BatteryChargeLimitResponse) {}
  rpc SetChargeLimit(SetBatteryLimitRequest)
      returns (BatteryChargeLimitResponse) {}
}

message SetBatteryLimitRequest { fixed32 Percentage = 1; }

message BatteryChargeLimitResponse {
  bool Success = 1;
  fixed32 Percentage = 2;

  string Message = 10;
}